--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,10 @@
-html, body {
-  width: 100%;
-  height: 100%;
+body {
+  border: 0;
   margin: 0;
-  overflow: hidden;
+  background-color: white;
 }
-canvas#canvas {
-  width: 1000px;
-  height: 1000px;
-  top: 0;
+canvas {
+  width: 100vw;
+  height: 100vh;
+  display: block;
 }
