--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@ body {
   background-color: white;
 }
 canvas {
-  width: 100vw;
-  height: 100vh;
+  width: 300px;
+  height: 300px;
   display: block;
 }
