--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,8 @@ body {
   background-color: white;
 }
 canvas {
-  width: 300px;
-  height: 300px;
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
   display: block;
 }
