--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,12 @@
 body {
   border: 0;
   margin: 0;
-  background-color: white;
+  background-color: black;
+  position: relative;
 }
 canvas {
-  background-color: black;
   width: 100vw;
   height: 100vh;
   display: block;
+  position: absolute;
 }
